--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,9 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.9",
     "react-hot-toast": "^2.4.1",
+    "react-image-crop": "^11.0.7",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.13.0",
     "sonner": "^1.5.0",
