--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.449.0",
     "next-themes": "^0.3.0",
@@ -35,7 +36,8 @@
     "recharts": "^2.13.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
