--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "embla-carousel-react": "^8.3.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.11.9",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.449.0",
     "next-themes": "^0.3.0",
