--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "react-easy-crop": "^5.1.0",
     "react-hot-toast": "^2.4.1",
     "react-image-crop": "^11.0.7",
+    "react-razorpay": "^3.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.13.0",
