--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.3.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "framer-motion": "^11.11.9",
     "js-cookie": "^3.0.5",
