--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "google-auth-library": "^9.14.1",
     "jsonwebtoken": "^9.0.2",
@@ -23,6 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "pdfkit-table": "^0.1.99",
+    "pdfmake": "^0.2.15"
   }
 }
