--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
+    "node-pdf-printer": "^1.1.7",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "otp-generator": "^4.0.1",
